--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,23 +1,26 @@
-<h1 class="ui header">Artist</h1>
-<table class="ui striped table">
-  <thead>
-    <tr class="center aligned">
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-  
-  <tbody>
-    <% @artists.each do |artist| %>
-      <tr class="center aligned">
-        <td>
-          <img class="ui avatar image small" src="https://robohash.org/<%= artist.avatar %>?set=set4" />
-        </td>
-        <td><%= link_to "Show", artist_path(artist) %></td>
-        <td><%= link_to "Edit", edit_artist_path(artist) %></td>
-        <td><%= link_to "Destroy", artist_path(artist), method: :delete %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br />
-<%= link_to "New Artist", new_artist_path %>
+<h1 class="ui header">Artist Town</h1>
+<%= link_to 'Add An Artist', new_artist_path %>
+<div class="ui divider"></div>
+
+<div class="ui grid">
+  <% @artists.each do |artist| %>
+    <div class="sixteen wide mobile eight wide tablet four wide computer column">
+      <div class="ui card">
+      
+        <div class="content">
+          <%= link_to "#{artist.name}", artist, class: "header" %>
+        </div>
+        <div class="extra content">
+          <div class="ui two buttons">
+            <div class="ui basic blue button">
+              <%= link_to 'Edit', edit_artist_path(artist) %>
+            </div>
+            <div class="ui basic red button">
+              <%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
