--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Artists#show</h1>
-<p>Find me in app/views/artists/show.html.erb</p>
+<div class="ui card">
+
+  <div class="content">
+    <p class="header">
+      <%= @artist.name %> 
+    </p>
+  </div>
+  <div class="extra content">
+  <%= link_to 'View Songs', artist_songs_path(@artist) %>
+    <%= link_to 'Edit', edit_artist_path(@artist) %> |
+    <%= link_to 'Back', artists_path %>
+  </div>
+</div>
