--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,8 @@
 <h1 class="ui header">Artist Town</h1>
-<%= link_to 'Add An Artist', new_artist_path %>
+<h3>Or Check Out Some Top List</h3>
+<%= link_to 'Add An Artist', new_artist_path %> 
+
+ 
 <div class="ui divider"></div>
 
 <div class="ui grid">
@@ -23,4 +26,5 @@
       </div>
     </div>
   <% end %>
+  
 </div>
